2009-09-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_expected/test53-2.5:
	  Similarly, ~~ is now optimized away; in 2.4, we see:
	  >>> dis.dis(test53.x)
	    5           0 LOAD_CONST               1 (10)
	                3 UNARY_INVERT        
			4 UNARY_INVERT        
			5 STORE_FAST
			0 (i)
	 In 2.5, the two UNARY_INVERT are gone.
	  "Fixes" test 53 on 2.5 and 2.6

2009-09-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_expected/test48-2.5:
	  Similarly, the following piece of opcode is now optimized away
	  since 2.5:
	  >>> dis.dis(test_input.test48.abc)
	  57          16 LOAD_CONST               1 (5)
	              19 POP_TOP             
	  "Fixes" test 48 on 2.5 and 2.6


2009-09-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_expected/test22-2.5:
	  From Python 2.5 "What's new" at
	  http://www.python.org/doc/2.5/whatsnew/other-lang.html:
	  "The code generator's peephole optimizer now performs simple constant
	   folding in expressions. If you write something like a = 2+3, the
	   code generator will do the arithmetic and produce code corresponding
	   to a = 5. (Proposed and implemented by Raymond Hettinger.)"
	  Verified from debug info that this actually happens; the code
	  generator now transforms the statement on line 79 to 1, and line 81
	  to 0.
	  So, remove these warnings from the expected output as they can't
	  be triggered anymore.  Fixes test 22 for Python 2.5

2009-09-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_input/test88.py:
	  gopherlib has been removed in 2.6, so wrap it inside a try/except.
	* test_expected/test88:
	* test_expected/test88-2.4:
	* test_expected/test88-2.5:
	  Update the line numbers since they've all changed.
	* test_expected/test88-2.6:
	  Add an expected output, which is now different since the deprecation
	  warning from the module itself is now gone.
	  Fixes test 88.
