@@ -1,5 +1,10 @@
 2009-09-30  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* pychecker/CodeChecks.py:
+	  More documentation.
+
+2009-09-30  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* test_expected/test53-2.5:
 	  Similarly, ~~ is now optimized away; in 2.4, we see:
 	  >>> dis.dis(test53.x)
